# webbed_hook

./: Cargo.toml  README.md  config.schema.json  request.schema.json  response.schema.json
.github/workflows/: ci.yaml  release.yaml
.run/: Build All.run.xml  Run receiver.run.xml  Run.run.xml
core/: Cargo.toml
core/src/: gitlab.rs  lib.rs  util.rs  webhook.rs
receiver/: Cargo.toml
receiver/src/: main.rs
src/: configuration.rs  git.rs  gitlab.rs  main.rs  rule.rs  webhook.rs
