[package]
name = "webbed_hook"
version = "0.1.0"
edition = "2024"

[dependencies]
webbed_hook_core = { path = "core" }
nonempty = { version = "0.11.0", features = ["serialize"] }
path-clean = "1.0.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
toml = { version = "0.9.0", features = [] }
serde_with = "3.12.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "deflate", "blocking"], default-features = false }

[dev-dependencies]
indoc = "2.0.6"

[profile.release]
lto = "fat"

[workspace]
members = [
    "core",
    "receiver",
]
