[package]
name = "webbed_hook"
version = "0.1.0"
edition = "2024"

[dependencies]
webbed_hook_core = { path = "core" }
nonempty = { version = "=0.12.0", features = ["serialize"] }
path-clean = "1.0.1"
regex = "=1.12.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_yml = "=0.0.12"
toml = { version = "=0.9.11", features = [] }
serde_with = "=3.16.1"
reqwest = { version = "=0.13.1", features = ["json", "rustls", "deflate", "blocking"], default-features = false }

[dev-dependencies]
indoc = "=2.0.7"

[profile.release]
lto = "fat"

[workspace]
members = [
    "core",
    "receiver",
]
